crates/reinhardt-pages/tests/ui/page/fail/mismatched_event_payload.stderr
error[E0631]: type mismatch in closure arguments
  --> tests/ui/page/fail/mismatched_event_payload.rs:9:17
   |
 9 |       let _invalid = page!(|| {
   |  ____________________^
10 | |         button { @click: |_event: InputEvent| {}, "Click" }
   | |                          -------------------- found signature defined here
11 | |     });
   | |______^ expected due to this
   |
   = note: expected closure signature `fn(ClickEvent) -> _`
              found closure signature `fn(InputEvent) -> _`
   = note: required for `{closure@$DIR/tests/ui/page/fail/mismatched_event_payload.rs:10:20: 10:40}` to implement `IntoTypedEventHandler<ClickEvent>`
note: required by a bound in `typed_event_handler`
  --> src/callback.rs
   |
   | pub fn typed_event_handler<P, H>(handler: H) -> PageEventHandler
   |        ------------------- required by a bound in this function
...
   |     H: IntoTypedEventHandler<P>,
   |        ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `typed_event_handler`
   = note: this error originates in the macro `page` (in Nightly builds, run with -Z macro-backtrace for more info)
